# idtype

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: push-rust.yml  push-yaml.yml  release.yml
examples/: secret.rs
src/: lib.rs
